mysql-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        fsGroup: 1000
        #runAsUser: 1      
      volumes:
        - name: mysql-persistent-storage
          emptyDir: {}
          #hostPath:
          #  path: /mnt/data/mysql
          #  type: DirectoryOrCreate
        - name: config-volume
          configMap:
            name: mysql-config
            optional: true
        - name: filebeat-config
          configMap:
            name: filebeat-config
            items:
              - key: filebeat.yml
                path: filebeat.yml
        - name: config
          configMap:
            name: metricbeat-config
            items:
              - key: metricbeat.yml
                path: metricbeat.yml 
                #- name: data
                #hostPath:
            # When metricbeat runs as non-root user, this directory needs to be writable by group (g+w)
            #path: /var/lib/metricbeat-data
            #type: DirectoryOrCreate
      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.5.0
          args: ["-c", "/usr/share/filebeat/filebeat.yml","-e"]
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/log/mysql
          - name: filebeat-config
            mountPath: /usr/share/filebeat/filebeat.yml
            subPath: filebeat.yml
        - name: metricbeat
          image: docker.elastic.co/beats/metricbeat:7.16.1
          args: [
            "-c", "/usr/share/metricbeat/metricbeat.yml","-e"]
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: config
            mountPath: /usr/share/metricbeat/metricbeat.yml
            readOnly: true
            subPath: metricbeat.yml
            #- name: data
            #mountPath: /usr/share/metricbeat/data
        - image: percona
          name: mysql
          # command: ["/bin/sh", "-c", "chown -R 1000:0 /var/log/mysql"]
          ports:
          - containerPort: 3306
          name: mysql
          volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/log/mysql
          - name: config-volume
            mountPath: /etc/my.cnf.d
