elastic.yaml
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: elasticsearch-config
#  labels:
#    component: elasticsearch
#data:
#  elasticsearch.yml: |
#    cluster.name: password-protected-efk
#    node.name: node-1
#    path.data: /usr/share/elasticsearch/data
#    http:
#      host: 0.0.0.0
#      port: 9200
#    bootstrap.memory_lock: true
#    transport.host: 127.0.0.1
#    xpack.license.self_generated.type: basic
#    # Enable xpack.security which is provided in basic subscription
#    xpack.security.enabled: true
#    # Disable unused xpack features 
#    xpack.monitoring.enabled: false
#    xpack.graph.enabled: false
#    xpack.watcher.enabled: false
#    xpack.ml.enabled: false
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  type: NodePort
  selector:
    component: elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:7.16.2 #docker.elastic.co/elasticsearch/elasticsearch:6.8.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        volumeMounts:
                #        - name: elasticsearch-config
                #          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
                #          subPath: elasticsearch.yml
        - name: elasticsearch-data
          mountPath: /usr/share/elasticsearch/data
        resources:
          limits:
            cpu: 500m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 4Gi
      # Allow non-root user to access PersistentVolume
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
              #      - name: elasticsearch-config
              #        configMap:
              #          name: elasticsearch-config
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-pvc
