ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.pranay.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: kibana
            port:
              number: 5601
